fixed: color style in graph component

--- a/src/app/dashboard/graph/graph.component.html
+++ b/src/app/dashboard/graph/graph.component.html
@@ -1,4 +1,4 @@
-<div class="widget widget--gradient">
+<div class="widget widget--graph-color">
   <div class="widget__header">
     <span class="widget__name">Graph <span>{{firstCurrency}} / {{secondCurrency}}</span></span>
     <a href="#" class="widget__question">
