fixed bugs in trade-history component

--- a/src/app/dashboard/trade-history/trade-history.component.html
+++ b/src/app/dashboard/trade-history/trade-history.component.html
@@ -74,7 +74,7 @@
             <tr>
               <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Time</th>
               <th class="table__cell-head table__cell-head--tal table__cell-head--p4">Rate for</th>
-              <th class="table__cell-head table__cell-head--tar table__cell-head--p4"><span>BTC</span></th>
+              <th class="table__cell-head table__cell-head--tar table__cell-head--p4"><span>{{firstCurrency}}</span></th>
             </tr>
           </thead>
           <tbody class="table__body table__body--none-shadow">
