--- a/src/app/dashboard/markets/markets.component.html
+++ b/src/app/dashboard/markets/markets.component.html
@@ -107,7 +107,8 @@
 
 
     <!--table start-->
-    <perfect-scrollbar style="max-width: 600px; max-height: 385px;" [config]="config">
+    <!--<perfect-scrollbar style="max-width: 600px; max-height: 385px;" [config]="config">-->
+    <perfect-scrollbar style="max-width: 600px; max-height: 385px;">
       <div class="widget__table-wrap">
 
         <table class="table widget__table">
