--- a/src/app/dashboard/trade-history/trade-history.component.html
+++ b/src/app/dashboard/trade-history/trade-history.component.html
@@ -67,7 +67,8 @@
   <div class="widget__content">
     <!--table start-->
     <!-- <ng-scrollbar [autoHide]="false" [barClass]="'bar-class'" [thumbClass]="'thumb2'"> -->
-    <perfect-scrollbar style="max-width: 600px; height: calc(100vh - 139px);" [config]="config">
+    <!--<perfect-scrollbar style="max-width: 600px; height: calc(100vh - 139px);" [config]="config">-->
+    <perfect-scrollbar style="max-width: 600px; height: calc(100vh - 139px);">
       <div class="widget__table-wrap widget__table-wrap--ml16">
         <table class="table widget__table">
           <thead>
@@ -94,7 +95,7 @@
                 </span>
               </td>
             </tr>
-    
+
             <!-- <tr class="table__row widget__table-row widget__table-row-hover--red">
                     <td class="table__cell table__cell--tal">
                       17:36:04
@@ -217,7 +218,8 @@
 
   <div class="widget__content widget__content--mob">
     <!--table mob start-->
-    <perfect-scrollbar style="max-width: 600px; height: calc(100vh - 105px);" [config]="config">
+    <!--<perfect-scrollbar style="max-width: 600px; height: calc(100vh - 105px);" [config]="config">-->
+    <perfect-scrollbar style="max-width: 600px; height: calc(100vh - 105px);">
       <table class="table widget__table widget__table--mob">
         <thead>
           <tr>
