fix bugs trading and open-orders

--- a/src/app/dashboard/trading/trading.component.html
+++ b/src/app/dashboard/trading/trading.component.html
@@ -78,7 +78,7 @@
         <div class="row row--jcsb widget__trading-row">
 
           <div class="wrap-input widget__input widget__input--mr32">
-            <input class="wrap-input__input" type="text"
+            <input class="wrap-input__input no-spinners" type="number"
                    formControlName="quantityOf"
                    (input)="quantityIput($event)"
                    name="quantityOf">
@@ -87,7 +87,7 @@
           </div>
 
           <div class="wrap-input widget__input">
-            <input class="wrap-input__input" type="text"
+            <input class="wrap-input__input no-spinners" type="number"
                    (input)="rateInput($event)"
                    formControlName="priceIn"
                    name="priceIn">
@@ -99,7 +99,7 @@
 
         <div class="row row--jcsb widget__trading-row">
           <div class="wrap-input widget__input">
-            <input class="wrap-input__input" type="text"
+            <input class="wrap-input__input no-spinners" type="number"
                    formControlName="totalIn"
                    (input)="totalInput($event)"
                    name="totalIn">
@@ -112,14 +112,15 @@
       <form [formGroup]="stopForm" *ngIf="dropdownLimitValue === 'STOP_LIMIT'">
         <div class="row row--jcsb widget__trading-row">
           <div class="wrap-input widget__input widget__input--mr32">
-            <input class="wrap-input__input" type="text"
+            <input class="wrap-input__input no-spinners" type="number"
+                   (input)="stopInput($event)"
                    formControlName="stop"
                    name="stop">
             <label class="wrap-input__label" for="">Stop</label>
             <div class="wrap-input__line"></div>
           </div>
           <div class="wrap-input widget__input">
-            <input class="wrap-input__input" type="text"
+            <input class="wrap-input__input no-spinners" type="number"
                    (input)="rateInput($event)"
                    formControlName="limit"
                    name="limit">
@@ -129,7 +130,7 @@
         </div>
         <div class="row row--jcsb widget__trading-row">
           <div class="wrap-input widget__input widget__input--mr32">
-            <input class="wrap-input__input" type="text"
+            <input class="wrap-input__input no-spinners" type="number"
                    formControlName="quantityOf"
                    (input)="quantityIput($event)"
                    name="quantityOf">
@@ -137,7 +138,7 @@
             <div class="wrap-input__line"></div>
           </div>
           <div class="wrap-input widget__input">
-            <input class="wrap-input__input" type="text"
+            <input class="wrap-input__input no-spinners" type="number"
                    formControlName="totalIn"
                    (input)="totalInput($event)"
                    name="totalIn">
@@ -159,7 +160,7 @@
           <a href="#"> {{ (marketService.currencyPairsInfo$ | async).balanceByCurrency1 }} {{arrPairName[0]}}</a>
         </div>
         <div>
-          Fee: {{order.commission | number:'1.1-8'}} {{arrPairName[0]}}
+          Fee: {{order.commission | number:'1.1-11'}} {{arrPairName[0]}}
         </div>
       </div>
       <div class="row row--jcsb txt-light-grey widget__trading-row-txt">
@@ -202,7 +203,7 @@
                  formControlName="quantityOf"
                  (input)="quantityIput($event)"
                  name="quantityOf">
-          <label class="wrap-input__label" for="">Quantity of {{arrPairName[0]}}</label>
+          <label class="wrap-input__label" for="" >Quantity of {{arrPairName[0]}}</label>
           <div class="wrap-input__line"></div>
         </div>
         <div class="wrap-input widget__input">
@@ -400,7 +401,7 @@
                  formControlName="totalIn"
                  (input)="totalInput($event)"
                  name="totalIn">
-          <label class="wrap-input__label" for="">Price in {{arrPairName[1]}}</label>
+          <label class="wrap-input__label" for="">Total in {{arrPairName[1]}}</label>
           <div class="wrap-input__line"></div>
         </div>
       </div>
