--- a/src/app/dashboard/orders/open-orders/open-orders.component.scss
+++ b/src/app/dashboard/orders/open-orders/open-orders.component.scss
@@ -118,3 +118,19 @@ a.active {
   }
 }
 
+input:not([value=""]){
+  ~ .wrap-input__label {
+    top: -5px;
+    left: 12px;
+    padding: 0 2px;
+    background-color: #264479;
+    font-size: 10px;
+    line-height: 12px;
+  }
+}
+
+.no-spinners::-webkit-inner-spin-button,
+.no-spinners::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
