--- a/src/app/dashboard/trading/trading.component.scss
+++ b/src/app/dashboard/trading/trading.component.scss
@@ -1,3 +1,5 @@
+$darker-blue:#237BEF;
+
 .tab-no-active{
   border-bottom: 2px solid transparent;
 }
@@ -12,4 +14,21 @@
 }
 :host{
   width: 100%;
+}
+
+input:not([value=""]){
+  ~ .wrap-input__label {
+    top: -5px;
+    left: 12px;
+    padding: 0 2px;
+    background-color: #2E304D;
+    font-size: 10px;
+    line-height: 12px;
+  }
+}
+
+.no-spinners::-webkit-inner-spin-button,
+.no-spinners::-webkit-outer-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
 }
