--- a/src/app/dashboard/market-search/market-search.component.html
+++ b/src/app/dashboard/market-search/market-search.component.html
@@ -19,12 +19,12 @@
       <div class="wrap-input__line"></div>
     </div>
   </div>
-
+  <perfect-scrollbar style="">
   <div class="market-search__content">
     <table class="table widget__table widget__table--mob">
       <tbody>
 
-      <ng-scrollbar [autoHide]="false" [barClass]="'bar-class'" [thumbClass]="'thumb2'">
+
       <ng-container *ngFor="let pair of showPairs">
       <tr class="table__row table__row--mob " (click)="setCurrentPair(pair)">
         <td class="table__cell table__cell--tac" style="width: 30px;">
@@ -54,9 +54,10 @@
       </tr>
       <tr style="height: 10px;"></tr>
       </ng-container>
-      </ng-scrollbar>
+
 
       </tbody>
     </table>
   </div>
+  </perfect-scrollbar>
 </div>
