--- a/src/app/dashboard/market-search/market-search.component.scss
+++ b/src/app/dashboard/market-search/market-search.component.scss
@@ -1,13 +1,23 @@
 :host{
   width: 100%;
-  height: 90vh;
+  height: 100%;
   position: absolute;
   overflow: hidden;
   top: 0;
   left: 0;
 }
 
-ng-scrollbar{
-  height: 85vh;
+.market-search__content{
+  padding-right: -10px;
+  margin-right: 20px;
 }
 
+.market-search{
+  height: 100%;
+}
+
+perfect-scrollbar{
+  height: calc(100vh - 154px);
+  position: relative;
+  right: -10px;
+}
